@@ -10,7 +10,8 @@ void freeCurseDB();
 void setDBCurse( int inSenderID, 
                  const char *inSenderEmail, const char *inReceiverEmail );
 
-void clearDBCurse( const char *inSenderEmail, const char *inReceiverEmail );
+void clearDBCurse( int inSenderID,
+                   const char *inSenderEmail, const char *inReceiverEmail );
 
 
 char isCursed( const char *inSenderEmail, const char *inReceiverEmail );
